--- a/edf/FindForm.resx
+++ b/edf/FindForm.resx
@@ -126,4 +126,10 @@
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>259, 16</value>
   </metadata>
+  <metadata name="contextMenuAllDuplicates.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>550, 16</value>
+  </metadata>
+  <metadata name="contextMenuDuplicates.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>705, 16</value>
+  </metadata>
 </root>
