--- a/edf/Properties/Resources.resx
+++ b/edf/Properties/Resources.resx
@@ -121,7 +121,16 @@
   <data name="icon-refreshalt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\icon-refreshalt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="edf2-app" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\edf2-app.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon-folder-open" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\icon-folder-open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edf2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\edf2.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2019-10-27_18-40-39" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\2019-10-27_18-40-39.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
