--- a/edf/Properties/Resources.resx
+++ b/edf/Properties/Resources.resx
@@ -118,19 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="icon-refreshalt" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\icon-refreshalt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="edf2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\edf2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="edf2-app" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\edf2-app.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="icon-folder-open" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="icon_folder_open" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\icon-folder-open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="edf2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\edf2.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icon_refreshalt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\icon-refreshalt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="2019-10-27_18-40-39" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="_2019_10_27_18_40_39" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\2019-10-27_18-40-39.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
