--- a/edf/FindForm.resx
+++ b/edf/FindForm.resx
@@ -129,18 +129,19 @@
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>259, 16</value>
   </metadata>
-  <data name="textBoxAboutEDF.Text" xml:space="preserve">
-    <value>Программа предназначена для быстрого поиска и удаления дубликатов файлов в выбранной папке.
-Поиск дубликатов происходит по размеру файла и контрольной сумме (MD5) файлов.
-
-ВНИМАНИЕ! Не удаляйте файлы, которые необходимы для корректной работы компьютера!</value>
-  </data>
   <metadata name="contextMenuAllDuplicates.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>550, 16</value>
   </metadata>
   <metadata name="contextMenuDuplicates.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>757, 17</value>
   </metadata>
+  <data name="textBoxAboutEDF.Text" xml:space="preserve">
+    <value>Программа предназначена для быстрого поиска и удаления дубликатов файлов в выбранной папке.
+Поиск дубликатов происходит по размеру файла и контрольной сумме (MD5) файлов.
+
+ВНИМАНИЕ! 
+Не удаляйте файлы, которые необходимы для корректной работы компьютера!</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
